# stoppable_thread-rs

./: .gitignore  Cargo.toml  search-index.js
implementors/core/ops/: trait.Drop.js
src/: lib.rs
src/stoppable_thread/: lib.rs.html
src/stoppable_thread/src/: lib.rs.html
stoppable_thread/: fn.spawn.html  index.html  sidebar-items.js  struct.Joining.html  struct.SimpleAtomicBool.html  struct.StoppableHandle.html  struct.Stopping.html
